Improve style (hide menu bar by default on mobile and fix input field too large)

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -180,8 +180,6 @@ input[type=submit].ticket_btn {
 
 .form {
 	display: inline-block;
-	width: 60%;
-	min-width: 30em;
 }
 
 .form_label {
@@ -239,6 +237,7 @@ input[type=submit].ticket_btn {
 		top: 0;
 		width: 100%;
 		height: 3rem;
+		display: block;
 	}
 
 	.vc {
@@ -253,6 +252,15 @@ input[type=submit].ticket_btn {
 
 	.oinnavbar {
 		float: right;
+	}
+
+	.form {
+		width: 60%;
+		min-width: 30em;
+	}
+
+	#shower {
+		display: none;
 	}
 }
 
@@ -272,6 +280,7 @@ input[type=submit].ticket_btn {
 		top: 0;
 		left: 0;
 		height: 100%;
+		display: none;
 	}
 
 	.oinnavbar {
@@ -287,5 +296,9 @@ input[type=submit].ticket_btn {
 	.form {
 		width: 100%;
 		padding: 1em;
+	}
+
+	#shower {
+		display: block;
 	}
 }
